compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_with_assign_value_fn_call_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let q = list.reverse([1, 2, 3])\n  let z = list.reverse(q)\n}\n    "
---

import list

fn main() {
  
  let z = list.reverse(list.reverse([1, 2, 3]))
}
    
