compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inlining_bin_op_as_var.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let x = 1 + 2\n  let y = x + 3\n}\n        "
---

import list

fn main() {
  
  let y = 1 + 2 + 3
}
        
